--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -124,7 +124,7 @@
             <div class="info_tag">
               <div class="info_tag_text"></div>
               <div class="info_tag_cart">
-                <img src="/static/images/cart.png" />
+                <img src="/static/images/cart_black.png" />
               </div>
               <div class="info_tag_price"></div>
             </div>
