not found handling

--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -109,28 +109,7 @@
     </div>
 
     <div id="item_list">
-      <ul>
-        <li data-permissions="write">
-          <div class="item_box add_item"></div>
-        </li>
-        <li data-snip="item">
-          <div class="item_box">
-            <div class="edit_tag">
-              <div class="edit_tag_close" data-permissions="write">
-                <img src="/static/images/close.png" />
-              </div>
-            </div>
-            <div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
-            <div class="info_tag">
-              <div class="info_tag_text"></div>
-              <div class="info_tag_cart">
-                <img src="/static/images/cart_black.png" />
-              </div>
-              <div class="info_tag_price"></div>
-            </div>
-          </div>
-        </li>
-      </ul>
+      <div data-snip="prod_list_template"></div>
     </div>
   </div>
 
