--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -47,7 +47,7 @@
           </div>
           <div id="prod_specs" class="prod_specs">
             <div data-snip="specs">
-              <div class="row">
+              <div class="row_simple">
                 <div class="column1">
                   <span class="prop_name"></span>
                 </div>
