--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -53,7 +53,7 @@
                     <label for="create_title" data-loc="title"></label><input id="create_title" type="text" name="create_title" />
                   </div>
                   <div class="row">
-                    <label for="create_price" data-loc="price"></label><input id="create_price" type="number" name="create_price" />
+                    <label for="create_price" data-loc="price"></label><input id="create_price" type="text" name="create_price" />
                   </div>
                   <div class="select_row">
                     <label for="create_categories" data-loc="categories"></label> <select id="create_categories" multiple="multiple"
