--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -1,66 +1,84 @@
 <html data-template="common">
-<head>
+<head
+	prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# product: http://ogp.me/ns/product#">
 <script type="text/javascript" src="/static/js/product.js"></script>
-<script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script type="text/javascript"
+	src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 <script type="text/javascript" src="/static/js/textile.js"></script>
+
+<meta data-snip="fb_meta">
+
+<meta property="og:url" />
+<meta property="og:title"  />
+<meta property="og:description" />
+<meta property="og:site_name" content="I did" />
+<meta property="og:type" content="product" />
+<meta property="og:image" />
+<meta property="product:price:currency" content="RON" />
+<meta property="product:price:amount" />
+
+</meta>
+
 </head>
 
 <body>
-  <div id="content" class="center page">
-    <div class="product_content">
-      <div class="navigation">
-        <a href="/" data-loc="categories"></a> <span>/</span>
-        <div data-snip="catlink"></div>
-      </div>
-      <div id="pleft">
-        <div data-snip="images">
-          <div id="detail_box">
-            <b:img />
-          </div>
-        </div>
-      </div>
-      <div id="pright">
-        <div class="prod_details">
-          <div class="prod_header">
-            <div id="fb-share-button">
-              <a href="#"><img src="/static/images/facebook.png" /></a>
-            </div>
-            <div id="add_to_cart_box">
-              <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
-            </div>
-            <div class="detailPrice">
-              <span data-snip="detailPrice"></span>
-            </div>
-            <div class="prod_price_line">
-              <span data-snip="stock"></span>
-            </div>
-          </div>
-          <div class="tab_select">
-            <ul id="product_details_tab">
-              <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
-              <li><a href="#prod_specs" data-loc="specs"></a></li>
-            </ul>
-          </div>
-          <div class="tab_continue"></div>
-          <div id="prod_desc" class="prod_desc">
-            <div data-snip="details"></div>
-          </div>
-          <div id="prod_specs" class="prod_specs">
-            <div data-snip="specs">
-              <div class="row_simple">
-                <div class="column1">
-                  <span class="prop_name"></span>
-                </div>
-                <div class="column2">
-                  <span class="prop_value"></span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div id="content" class="center page">
+		<div class="product_content">
+			<div class="navigation">
+				<a href="/" data-loc="categories"></a> <span>/</span>
+				<div data-snip="catlink"></div>
+			</div>
+			<div id="pleft">
+				<div data-snip="images">
+					<div id="detail_box">
+						<b:img />
+					</div>
+				</div>
+			</div>
+			<div id="pright">
+				<div class="prod_details">
+					<div class="prod_header">
+						<div id="fb-share-button">
+							<a href="#"><img src="/static/images/facebook.png" /></a>
+						</div>
+						<div id="add_to_cart_box">
+							<a id="add_to_cart" href="#"><img
+								src="/static/images/cart_black.png" /></a>
+						</div>
+						<div class="detailPrice">
+							<span data-snip="detailPrice"></span>
+						</div>
+						<div class="prod_price_line">
+							<span data-snip="stock"></span>
+						</div>
+					</div>
+					<div class="tab_select">
+						<ul id="product_details_tab">
+							<li class="active"><a href="#prod_desc"
+								data-loc="description"></a></li>
+							<li><a href="#prod_specs" data-loc="specs"></a></li>
+						</ul>
+					</div>
+					<div class="tab_continue"></div>
+					<div id="prod_desc" class="prod_desc">
+						<div data-snip="details"></div>
+					</div>
+					<div id="prod_specs" class="prod_specs">
+						<div data-snip="specs">
+							<div class="row_simple">
+								<div class="column1">
+									<span class="prop_name"></span>
+								</div>
+								<div class="column2">
+									<span class="prop_value"></span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
 
