--- a/shopweb/web/dataprotection.html
+++ b/shopweb/web/dataprotection.html
@@ -8,7 +8,7 @@
           Aceste informații vor putea fi folosite de catre SC IDID SHOP SRL pentru emiterea facturii, livrarea produselor, confirmarea
           comenzilor, diverse oferte speciale, promoții, etc... Utilizatorii site-ului pot solicita ștergerea informațiilor din baza de date.
           Orice solicitare/notificare în vederea ștergerii&amp;nbsp;informațiilor&amp;nbsp;din baza de date va fi trimisă de către persoana înscrisă
-          în baza de date prin e-mail la adresa <a href="mailto:contact@koreanfood.ro">office@idid.ro</a>
+          în baza de date prin e-mail la adresa <a href="mailto:office@idid.ro">office@idid.ro</a>
         </p>
         <p style="text-align: justify;">Comerciantul se obligă ca datele personale să nu fie difuzate către terți.</p>
         <p style="text-align: justify;">Datorită faptului că datele cu caracter personal sunt transmise pe cale electronică, societatea
@@ -47,8 +47,8 @@
         <p style="text-align: justify;">Prelucrările de date cu caracter personal se efectuează numai dacă persoana vizată şi-a dat
           consimţământul, în mod expres şi neechivoc, pentru acea prelucrare.</p>
         <p style="text-align: justify;">Informatiile referitoare la cardurile bancare ale Clientilor nu sunt stocate in baza de date a
-          site-ului www.koreanfood.ro, acestea fiind procesate si folosite strict de furnizorii de servicii de plata online.
-          www.koreanfood.ro nu este responsabil pentru eventualele probleme de securitate ale server-ului pe care sunt stocate aceste date.</p>
+          site-ului www.idid.ro, acestea fiind procesate si folosite strict de furnizorii de servicii de plata online.
+          www.idid.ro nu este responsabil pentru eventualele probleme de securitate ale server-ului pe care sunt stocate aceste date.</p>
         <p style="text-align: justify;">Consimţământul nu este necesar în următoarele cazuri:</p>
         <p style="text-align: justify;">* când prelucrarea este necesară în vederea executării unui contract sau antecontract la care
           persoana vizată este parte ori în vederea luării unor măsuri, la cererea acesteia, înaintea încheierii unui contract sau
@@ -75,9 +75,9 @@
           vor fi considerate destinatari şi în consecinţă, nu va fi necesar consimţământul persoanei vizate (de ex.: datele personale
           solicitate de instanţele de judecată, procurori, organe de urmărire penală, dacă sunt necesare desfăşurării unei anchete).</p>
         <p style="text-align: justify;">COOKIES</p>
-        <p style="text-align: justify;">Koreanfood.ro folosește cookies doar pentru a îmbunătăți navigarea în magazinul on-line. Acestea
+        <p style="text-align: justify;">idid.ro folosește cookies doar pentru a îmbunătăți navigarea în magazinul on-line. Acestea
           nu conțin date personale. Conform OUG 13/2012, vizitatorii site-ului își exprimă acordul pentru folosirea de cookies prin setările
-          personale din browser. Vizitatorii magazinului Koreanfood.ro sunt informați în legătura cu folosirea de cookies printr-un banner
+          personale din browser. Vizitatorii magazinului idid.ro sunt informați în legătura cu folosirea de cookies printr-un banner
           situat pe homepage. Prin continuarea navigării, vizitatorii își exprimă acordul cu privire la acest aspect.</p>
         <p style="text-align: justify;">Pentru mai multe informații despre cookies și influența acestora asupra navigării pe internet
           puteți accesa www.aboutcookies.org</p>
