--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -34,9 +34,7 @@
 
     <div id="category_create_dialog" data-permissions="write">
       <div>
-        <div class="title_dialog">
-          <h2 id="new_cat_title" data-loc="new.category"></h2>
-        </div>
+        <div id="new_cat_title" class="title_dialog" data-loc="new.category"></div>
         <div class="close_dialog">
           <img src="/static/images/close.png" />
         </div>
@@ -67,9 +65,7 @@
 
     <div id="category_update_dialog" data-permissions="write">
       <div>
-        <div class="title_dialog">
-          <h2 id="edit_cat_title" data-loc="edit.category"></h2>
-        </div>
+        <div class="title_dialog" id="edit_cat_title" data-loc="edit.category"></div>
         <div class="close_dialog">
           <img src="/static/images/close.png" />
         </div>
