--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -26,9 +26,7 @@
 
     <div id="product_create_dialog">
       <div class="product_content quickview">
-        <div class="title_dialog">
-          <h2 data-loc="new.product"></h2>
-        </div>
+        <div class="title_dialog" data-loc="new.product"></div>
         <div class="close_product_dialog">
           <img src="/static/images/close.png" />
         </div>
