--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -12,7 +12,7 @@
 <meta property="og:site_name" content="I did" />
 <meta property="og:type" content="product" />
 <meta property="og:image" />
-<meta property="product:price:currency" content="RON" />
+<meta property="product:price:currency" content="Lei" />
 <meta property="product:price:amount" />
 
 </meta>
