--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -23,8 +23,7 @@
   <div id="content" class="center page">
     <div class="product_content">
       <div class="navigation">
-        <a href="/" data-loc="categories"></a> <span>/</span>
-        <div data-snip="catlink"></div>
+        <a href="/"><img src="/static/images/home.png" /></a> <span>/</span> <span><div data-snip="catlink"></div></span>
       </div>
       <div id="pleft">
         <div data-snip="images">
@@ -53,6 +52,7 @@
             <ul id="product_details_tab">
               <li class="active"><a href="#prod_desc" data-loc="description"></a></li>
               <li><a href="#prod_specs" data-loc="specs"></a></li>
+               <li><a href="#prod_customize" data-loc="customize"></a></li>
             </ul>
           </div>
           <div class="tab_continue"></div>
@@ -71,6 +71,15 @@
               </div>
             </div>
           </div>
+
+          <div id="prod_customize" class="prod_specs tab_content">
+            <div data-snip="customize">
+              <div class="row_simple top10">
+                <span class="content"></span>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
