--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" src="/static/js/blockui.js"></script>
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
+<script type="text/javascript" src="/static/js/waitforimages.js"></script>
 <script type="text/javascript" src="/static/js/categories.js"></script>
 </head>
 
