--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="/static/js/textile.js"></script>
 
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
+<script type="text/javascript" src="/static/js/waitforimages.js"></script>
 <script type="text/javascript" src="/static/js/products.js"></script>
 
 </head>
