--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -15,7 +15,7 @@
       <div>
         <div id="new_cat_title" class="title_dialog" data-loc="new.category"></div>
         <div class="close_dialog">
-          <img src="/static/images/close.png" />
+          <span class="sprite sprite-close" />
         </div>
         <div class="content_dialog left10">
           <form action="/category/create" id="create_category_form" method="POST">
@@ -46,7 +46,7 @@
       <div>
         <div class="title_dialog" id="edit_cat_title" data-loc="edit.category"></div>
         <div class="close_dialog">
-          <img src="/static/images/close.png" />
+          <span class="sprite sprite-close" />
         </div>
         <div class="content_dialog left10">
           <form id="update_category_form" method="POST">
