--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -23,20 +23,20 @@
   <div id="content" class="center page">
     <div class="product_content">
       <div class="navigation">
-        <a href="/"><img src="/static/images/home.png" /></a> <span>/</span> <span><div data-snip="catlink"></div></span>
+        <a href="/"><span class="sprite sprite-home" /></a> <span>/</span> <span><div data-snip="catlink"></div></span>
       </div>
       <div id="pleft">
         <div data-snip="images">
           <div id="detail_box">
             <b:img id="sel_img"></b:img>
-            <span id="gallery_left" class="left clickable"> <img src="/static/images/left.png" />
+            <span id="gallery_left" class="left clickable"> <span class="sprite sprite-left" />
             </span>
             <div id="gallery">
               <ul>
                 <li id="thumb"><a href="#"></a></li>
               </ul>
             </div>
-            <span id="gallery_right" class="left clickable"> <img src="/static/images/right.png" />
+            <span id="gallery_right" class="left clickable"> <span class="sprite sprite-right" />
             </span>
           </div>
         </div>
@@ -48,7 +48,7 @@
               <a href="#"><img src="/static/images/facebook.png" /></a>
             </div>
             <div id="add_to_cart_box">
-              <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
+              <a id="add_to_cart" href="#"><span class="sprite sprite-cart_black" /></a>
             </div>
             <div class="detailPrice">
               <span data-snip="detailPrice"></span>
