--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -14,6 +14,7 @@
         <li class="active"><a href="#account" data-loc="my.account"></a></li>
         <li><a href="#history" data-loc="my.orders"></a></li>
         <li data-permissions="write"><a href="#edit_orders_status" data-loc="modify.orders"></a></li>
+        <li data-permissions="write"><a href="#pending_orders" data-loc="orders"></a></li>
       </ul>
     </div>
 
@@ -109,7 +110,15 @@
       <div class="row_simple top20">
         <label for="username" data-loc="email"></label> <input id="search_orders" type="text" name="username" />
       </div>
-      <div id="orders_result" class="row top20"></div>
+      <div id="orders_result" class="row_simple top20"></div>
+    </div>
+
+    <div id="pending_orders" data-permissions="write">
+      <div class="row_simple top20">
+        <span id="search_received_orders" class="btn" data-loc="received.orders" />
+        <span id="search_pending_orders" class="btn" data-loc="pending.orders" />
+      </div>
+      <div id="pending_orders_result" class="row_simple top20"></div>
     </div>
 
     <div data-snip="address_template"></div>
