--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -2,6 +2,10 @@
 <head>
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
 <script type="text/javascript" src="/static/js/accountsettings.js"></script>
+
+<title>idid.ro - Setari cont utilizator</title>
+<meta name="description" content="Setati aici datele utilizatorului, schimbare parola, adaugare adrese etc."/>
+
 </head>
 
 <body>
