--- a/shopweb/web/cookies.html
+++ b/shopweb/web/cookies.html
@@ -1,4 +1,12 @@
 <html data-template="common">
+
+<head>
+
+<title>idid.ro - Cookies</title>
+<meta name="description" content="Informatii privind cookie-uri"/>
+
+</head>
+
 <body>
   <div id="content" class="center page">
     <div class="terms">
