--- a/shopweb/web/returnpolicy.html
+++ b/shopweb/web/returnpolicy.html
@@ -1,4 +1,9 @@
 <html data-template="common">
+<head>
+<title>idid.ro - Politica de retur</title>
+<meta name="description" content="Informatii privind politica de retur"/>
+
+</head>
 <body>
   <div id="content" class="center page">
     <div class="terms">
