--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -1,4 +1,12 @@
 <html data-template="common">
+
+<head>
+
+<title>idid.ro - termeni si conditii</title>
+<meta name="description" content="Informatii privind termenii si conditiile site-ului"/>
+
+</head>
+
 <body>
   <div id="content" class="center page">
     <div class="terms">
