--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -4,6 +4,12 @@
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
 <script type="text/javascript" src="/static/js/waitforimages.js"></script>
 <script type="text/javascript" src="/static/js/categories.js"></script>
+
+<title>idid.ro - Produse handmade de calitate</title>
+<meta name="description" content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+<meta name="keywords" content="bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+
+
 </head>
 
 <body>
