--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -7,6 +7,10 @@
 <script type="text/javascript" src="/static/js/waitforimages.js"></script>
 <script type="text/javascript" src="/static/js/products.js"></script>
 
+<title>idid.ro - Produse handmade de calitate</title>
+<meta name="description" content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+<meta name="keywords" content="bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+
 </head>
 
 <body>
